--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -70,7 +70,7 @@ button {
     height: 2.8rem;
 }
 .contents-width {
-    max-width: 1040px;
+    max-width: 1240px;
 }
 
 .select-text {
@@ -185,7 +185,10 @@ button {
 
 header {
     hr {
-        height: 5px;
+        height: 3px;
+    }
+    .logo {
+        height: 31px;
     }
 }
 
