--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -83,7 +83,9 @@ Aa-10
                     <th>上映時間(分)</th>
                     <th>レイティング</th>
                     <th>公開日<br>興行終了予定日</th>
+                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
                     <th></th>
+                    <% } %>
                 </tr>
             </thead>
             <tbody>
@@ -96,6 +98,7 @@ Aa-10
                     <td name="contentRating" class="text-left">$contentRating$</td>
                     <td name="dayPublished__dayAvailabilityEnds" class="text-left">
                         $dayPublished$<br>$dayAvailabilityEnds$</td>
+                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
                     <td name="identifier__identifier">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-sm btn-primary"
@@ -111,6 +114,7 @@ Aa-10
                             </a>
                         </div>
                     </td>
+                    <% } %>
                 </tr>
             </tbody>
         </table>
