--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -43,13 +43,13 @@ Aa-4
             <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">日付 <span
                     class="text-danger">＊</span></label>
             <div class="col-md-8 py-3">
-                <div class="pl-4">
-                    <input class="form-check-input" type="radio" name="days" id="radio-days-1" value="1" checked>
-                    <label class="form-check-label mr-3" for="radio-days-1">1日</label>
-                    <input class="form-check-input" type="radio" name="days" id="radio-days-3" value="3">
-                    <label class="form-check-label mr-3" for="radio-days-3">3日</label>
-                    <input class="form-check-input" type="radio" name="days" id="radio-days-7" value="7">
-                    <label class="form-check-label" for="radio-days-7">7日</label>
+                <div class="d-flex align-items-center">
+                    <input class="d-block" type="radio" name="days" id="radio-days-1" value="1" checked>
+                    <label class="d-block mr-3" for="radio-days-1">1日</label>
+                    <input class="d-block" type="radio" name="days" id="radio-days-3" value="3">
+                    <label class="d-block mr-3" for="radio-days-3">3日</label>
+                    <input class="d-block" type="radio" name="days" id="radio-days-7" value="7">
+                    <label class="d-block" for="radio-days-7">7日</label>
                 </div>
             </div>
         </div>
@@ -66,10 +66,10 @@ Aa-4
         <div class="form-group row">
             <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></label>
             <div class="col-md-8 py-3">
-                <div class="pl-4">
-                    <input class="form-check-input" type="checkbox" name="onlyReservedSeatsAvailable"
+                <div class="d-flex align-items-center">
+                    <input class="d-block mr-2" type="checkbox" name="onlyReservedSeatsAvailable"
                         id="onlyReservedSeatsAvailable" value="1">
-                    <label class="form-check-label" for="onlyReservedSeatsAvailable">座席指定有のみ</label>
+                    <label class="d-block" for="onlyReservedSeatsAvailable">座席指定有のみ</label>
                 </div>
             </div>
         </div>
