--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,14 +1,14 @@
 <header class="bg-light-gray shadow-sm border-bottom border-gray">
     <hr class="bg-dark-gray m-0 border-0">
-    <div class="header contents-width mx-auto d-flex align-items-center justify-content-between p-3">
+    <div class="header contents-width mx-auto d-flex align-items-center justify-content-between py-2 px-3">
         <div class="d-flex align-items-center">
-            <img class="logo mr-md-3" src="/images/ProjectIcon.png" alt="">
-            <h1 class="text-x-large d-none d-md-block">Chevre</h1>
+            <div class="logo"><img class="mr-md-3 h-100 rounded" src="/images/ProjectIcon.png" alt=""></div>
+            <h1 class="d-none d-md-block font-weight-bold text-dark-gray">CHEVRE</h1>
         </div>
         <div class="d-flex align-items-center">
             <div class="mr-3"><%= user.profile.family_name %> <%= user.profile.given_name %></div>
             <div>
-                <a class="btn btn-logout btn-secondary" href="<%= user.generateLogoutUrl() %>">ログアウト</a>
+                <a class="btn btn-logout btn-sm btn-secondary" href="<%= user.generateLogoutUrl() %>"><i class="fas fa-sign-out-alt"></i></a>
             </div>
         </div>
     </div>
