--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -106,19 +106,19 @@
 </div>
 
 <div class="form-group row">
-    <label for="isBoxTicket" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="isBoxTicket" class="col-md-4 py-3 text-md-right mb-2 mb-md-0">
         BOX利用
     </label>
-    <div class="col-md-8 form-inline">
+    <div class="col-md-8 form-inline py-3">
         <input type="checkbox" value="1" name="isBoxTicket" <% if (forms.isBoxTicket) { %> checked <% } %>>
     </div>
 </div>
 
 <div class="form-group row">
-    <label for="isOnlineTicket" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="isOnlineTicket" class="col-md-4 py-3 text-md-right mb-2 mb-md-0">
         オンライン利用
     </label>
-    <div class="col-md-8">
+    <div class="col-md-8 py-3">
         <input type="checkbox" value="1" name="isOnlineTicket" <% if (forms.isOnlineTicket) { %> checked <% } %>>
     </div>
 </div>
