--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -23,7 +23,7 @@ Aa-6
             </p>
             <% } %>
         </div>
-        <% /* 券種コード */ %>
+
         <div class="form-group row">
             <label for="id" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
                 券種コード
@@ -57,6 +57,59 @@ Aa-6
                 </select>
             </div>
         </div>
+
+        <div class="form-group row">
+            <label for="" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                単価
+            </label>
+            <div class="col-md-8">
+                <div class="input-group">
+                    <select class="form-control" name="priceSpecification[referenceQuantity][value]">
+                        <option value="">---</option>
+                        <% for (let i = 1; i <= 10; i++) { %>
+                        <option value="<%= i %>">
+                            <%= i %>
+                        </option>
+                        <% } %>
+                    </select>
+
+                    <div class="input-group-append">
+                        <span class="input-group-text">枚あたり</span>
+                    </div>
+
+                    <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[minPrice]"
+                        id="priceSpecification[minPrice]" value="" />
+
+                    <div class="input-group-append">
+                        <span class="input-group-text">円以上</span>
+                    </div>
+
+                    <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[maxPrice]"
+                        id="priceSpecification[maxPrice]" value="" />
+
+                    <div class="input-group-append">
+                        <span class="input-group-text">円以下</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="category[id]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                券種区分
+            </label>
+            <div class="col-md-8">
+                <select class="form-control" name="category[id]">
+                    <option value="">---</option>
+                    <% ticketTypeCategories.forEach((category) => { %>
+                    <option value="<%= category.id %>">
+                        <%= category.name %>
+                    </option>
+                    <% }) %>
+                </select>
+            </div>
+        </div>
+
         <% /* 検索ボタン */ %>
         <div class="panel-body">
             <button type="button" class="btn btn-ok search btn-primary">検索する</button>
