--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -53,7 +53,13 @@
         <a class="list-group-item list-group-item-action <%= (displayId === 'Aa-17') ? 'active': ''; %>"
             href="/serviceTypes">興行区分検索</a>
 
+        <a class="list-group-item list-group-item-action <%= (displayId === 'PS-01') ? 'active': ''; %>"
+            href="/priceSpecifications/new">価格仕様登録</a>
+
+        <a class="list-group-item list-group-item-action <%= (displayId === 'PS-02') ? 'active': ''; %>"
+            href="/priceSpecifications">価格仕様検索</a>
     </div>
+
     <div class="list-group">
         <div class="list-group-item bg-light-gray">予約管理</div>
         <a class="list-group-item list-group-item-action <%= (displayId === 'Aa-11') ? 'active': ''; %>"
