### Added - 価格仕様の適用ムビチケ券種区分に区分(G3,G4など)を追加

--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -111,8 +111,8 @@ PS-02
                     </td>
                     <td name="appliesToVideoFormat">$appliesToVideoFormat$</td>
                     <td name="appliesToSoundFormat">$appliesToSoundFormat$</td>
-                    <td name="appliesToMovieTicketType">
-                        $appliesToMovieTicketType$
+                    <td name="appliesToMovieTicketType__appliesToMovieTicket.name">
+                        $appliesToMovieTicketType$ $appliesToMovieTicket.name$
                     </td>
                     <td name="price__priceCurrency">$price$ $priceCurrency$</td>
                 </tr>
