### Changed - 予約検索条件拡張(発券、入場フラグ)

--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -124,6 +124,32 @@ Aa-11
             </div>
         </div>
 
+        <div class="form-group row">
+            <label for="checkedIn" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+            </label>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="checkedIn" value="1" id="checkedIn">
+                            <label class="form-check-label" for="checkedIn">
+                                発券済
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="attended" value="1" id="attended">
+                            <label class="form-check-label" for="attended">
+                                入場済
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="panel-body">
             <button type="button" class="btn btn-ok search btn-primary">検索する</button>
             <button type="button" class="reset-condition btn btn-danger">検索内容リセット</button>
